--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,14 +1,25 @@
 body {
   background-color: rgb(250, 250, 250)
 }
+.container {
+  overflow:hidden
+}
 
 @media(max-width: 770px) {
   .contianer {
     margin: 0, 10%
   }
+  .image {
+  width: 100% !important;
+  margin: 0 !important
+
+  }
 }
 
-.image {
-  width: 370px;
-
+@media(min-width: 770px) {
+  .image {
+    width: 370px;
+    margin: 0 35% !important;
+  
+  }
 }
